<resources>
    <string name="app_name">Pocket Market</string>
    <string name="text_accounts">All Accounts</string>

    <!-- TEXTOS Usuário PF -->
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="datanasc">Data Nascimento</string>
    <string name="endereco">Endereço Residencial</string>
    <string name="cep">CEP</string>
    <string name="numeroresudencia">Número Residencial</string>
    <string name="dddcel">DDD Celular</string>
    <string name="numcel">DDD e Número de Celular</string>
    <string name="senhapf">Senha Usuário</string>
    <string name="rdfem">Feminino</string>
    <string name="rdmasc">Masculino</string>
    <string name="complementoresidencia">Complemento Residencial</string>
    <string name="bairroresidencial">Bairro</string>
    <string name="cidaderesidencial">Cidade</string>
    <string name="UFresidencial">UF</string>
    <string name="email">Email</string>
    <string name="senhaLogin">Senha</string>
    <!-- TEXTOS Usuário PF -->

    <!-- Textos Usuário PJ -->
    <string name="razaosocial">Razão Social</string>
    <string name="cnpj">CNPJ</string>
    <string name="senhapj">Senha Usuário</string>
    <string name="datafundacao">Data De Fundacao</string>
    <string name="emailcontato">Email Contato</string>
    <string name="enderecocomercial">Endereço Comercial</string>
    <string name="cepcomercial">CEP Comercial</string>
    <string name="numerocomercial">Número Comercial</string>
    <string name="complementoendpj">Complemento Endereço</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="numcomer">DDD e Número Comercial</string>
    <!-- Textos Usuário PJ -->

    <!-- Textos Tela Decisão Cadastro PF/PJ -->
    <string name="text_decisaoPF">Cadastro Pessoa Fisica</string>
    <string name="text_decisaoPJ">Cadastro Pessoa Juridica</string>
    <!-- Textos Tela Decisão Cadastro PF/PJ -->

    <!-- Textos layout venda motocicleta -->
    <string name="titulovendamotocicleta">Titulo Venda</string>
    <string name="descricaovendamotocicleta">Descrição Venda</string>
    <string name="marcamoto">Marca Motocicleta</string>
    <string name="modelomoto">Modelo Motocicleta</string>
    <string name="anofabricacaomoto">Ano de Fabricação</string>
    <string name="placamoto">Placa Motocicleta</string>
    <string name="quilometragemmoto">Quilometragem</string>
    <string name="cormoto">Cor</string>
    <string name="combustivelmotoalcool">Álcool</string>
    <string name="combustivelmotogasolina">Gasolina</string>
    <string name="possuimultassim">Sim</string>
    <string name="possuimultasnao">Não</string>
    <string name="cilindradasmoto">Cilindradas</string>
    <string name="precomoto">Preço</string>
    <string name="registroprodutomoto">Cadastrar Produto</string>
    <!-- Textos layout venda motocicleta -->

    <!-- Textos layout venda carro -->
    <string name="titulovendacarro">Titulo Venda</string>
    <string name="descricaovendacarro">Descrição Venda</string>
    <string name="marcacarro">Marca Carro</string>
    <string name="modelocarro">Modelo Carro</string>
    <string name="anofabricacaocarro">Ano de Fabricação</string>
    <string name="placacarro">Placa Carro</string>
    <string name="quilometragemcarro">Quilometragem</string>
    <string name="corcarro">Cor</string>
    <string name="combustivelcarroflex">Flex</string>
    <string name="combustivelcarroalcool">Álcool</string>
    <string name="combustivelcarrogasolina">Gasolina</string>
    <string name="possuimultassimcarro">Sim</string>
    <string name="possuimultasnaocarro">Não</string>
    <string name="qtdportascarro">Quantidade Portas</string>
    <string name="cambiocarro">Cambio</string>
    <string name="precocarro">Preço</string>
    <string name="registroprodutocarro">Cadastrar Produto</string>
    <!-- Textos layout venda carro -->

    <!-- Textos layout venda apartamento -->
    <string name="titulovendaapartamento">Titulo Venda</string>
    <string name="descricaovendaapartamento">Descrição Venda</string>
    <string name="qtdquartosapartamento">Quantidade Quartos</string>
    <string name="qtdsuitesapartamento">Quantidade Suites</string>
    <string name="valiptuapartamento">Valor IPTU</string>
    <string name="valcondominioapartamento">Valor Condominio</string>
    <string name="qtdvagasgaragemapartamento">Quantidade Vagas Garagem</string>
    <string name="vendaapartamento">Venda</string>
    <string name="aluguelapartamento">Aluguel</string>
    <string name="cepapartamento">CEP Apartamento</string>
    <string name="areautilapartamento">Área Util (Metros Quadrados)</string>
    <string name="precoapartamento">Preço Apartamento</string>
    <string name="registroprodutoapartamento">Registrar Venda</string>
    <!-- Textos layout venda apartamento -->

    <!-- Textos layout venda casa -->
    <string name="titulovendacasa">Titulo Venda</string>
    <string name="descricaovendacasa">Descrição Venda</string>
    <string name="qtdquartoscasa">Quantidade Quartos</string>
    <string name="qtdsuitescasa">Quantidade Suites</string>
    <string name="valiptucasa">Valor IPTU</string>
    <string name="valcondominiocasa">Valor Condominio</string>
    <string name="qtdvagasgaragemcasa">Quantidade Vagas Garagem</string>
    <string name="vendacasa">Venda</string>
    <string name="aluguelcasa">Aluguel</string>
    <string name="cepcasa">CEP casa</string>
    <string name="areaconstruidacasa">Área Construida (Metros Quadrados)</string>
    <string name="precocasa">Preço casa</string>
    <string name="registroprodutocasa">Registrar Venda</string>
    <!-- Textos layout venda casa -->

    <!-- Textos layout venda desktop -->
    <string name="titulovendadesktop">Titulo Venda</string>
    <string name="descricaovendadesktop">Descrição Venda</string>
    <string name="marcadesktop">Marca Desktop</string>
    <string name="modelodesktop">Modelo Desktop</string>
    <string name="qtdramdesktop">Memoria RAM (em GBs)</string>
    <string name="precodesktop">Preço Desktop</string>
    <string name="registroprodutodesktop">Registrar Venda</string>
    <!-- Textos layout venda desktop -->

    <!-- Textos layout venda notebook -->
    <string name="titulovendanotebook">Titulo Venda</string>
    <string name="descricaovendanotebook">Descrição Venda</string>
    <string name="marcanotebook">Marca notebook</string>
    <string name="modelonotebook">Modelo notebook</string>
    <string name="qtdramnotebook">Memoria RAM (em GBs)</string>
    <string name="preconotebook">Preço notebook</string>
    <string name="registroprodutonotebook">Registrar Venda</string>
    <string name="tamanhotelanotebook">Tamanho da Tela (Polegadas)</string>
    <!-- Textos layout venda notebook -->

    <!-- Textos layout venda celulares -->
    <string name="titulovendacelulares">Titulo Venda</string>
    <string name="descricaovendacelulares">Descrição Venda</string>
    <string name="marcacelulares">Marca Celulares</string>
    <string name="modelocelulares">Modelo Celulares</string>
    <string name="qtdgbsarmazenamentocelular">Espaço Interno (em GBs)</string> @@@
    <string name="precocelulares">Preço celulares</string>
    <string name="registroprodutocelulares">Registrar Venda</string>
    <string name="tamanhotelacelular">Tamanho da Tela (Polegadas)</string>
    <!-- Textos layout venda celulares -->

    <!-- Textos layout venda servico -->
    <string name="titulovendaservico">Titulo Serviço</string>
    <string name="descricaovendaservico">Descrição Serviço</string>
    <string name="precoservico">Preço Serviço</string>
    <string name="registroprodutoservico">Registrar Serviço</string>
    <!-- Textos layout venda servico -->

    <!-- Textos layout venda servico -->
    <string name="titulomsg">Titulo Mensagem</string>
    <string name="descricaomsg">Mensagem</string>
    <string name="registromsg">Registrar Envio Mensagem</string>
    <!-- Textos layout venda servico -->

    <!-- Textos compartilhados -->
    <string name="possui">Sim</string>
    <string name="naopossui">Não</string>
    <string name="marcaprocessador">Marca Processador</string>
    <string name="modeloprocessador">Modelo Processador</string>
    <string name="qtdgbshd">Quantidade Gigas HD</string>
    <string name="sistema">Sistema Operacional</string>
    <string name="versaosistema">Versão Sistema Operacional</string>


    <!-- Textos compartilhados -->

    <string name="registro">Confirmar Cadastro</string>
    <string name="registropj">Confirmar Cadastro</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="textobotaologin">Login</string>


    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="textoformulario">Não Possui Conta? Cadastre-se Agora</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>

    <string name="cpfcnpglogin">CPF / CNPJ</string>

    <string-array name="listaUFs">
        <item>AC</item>
        <item>AL</item>
        <item>AM</item>
        <item>AP</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MG</item>
        <item>MS</item>
        <item>MT</item>
        <item>PA</item>
        <item>PB</item>
        <item>PE</item>
        <item>PI</item>
        <item>PR</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RO</item>
        <item>RR</item>
        <item>RS</item>
        <item>SC</item>
        <item>SE</item>
        <item>SP</item>
        <item>TO</item>
    </string-array>

</resources>